--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-cryptography==42.0.5
+cryptography==43.0.1
 customtkinter==5.2.2
-mysql-connector-python==8.3.0
-numpy==1.26.4
-pandas==2.2.1
-requests==2.31.0
-scipy==1.12.0
-sounddevice==0.4.6
-torch==2.2.1
-torchaudio==2.2.1
-speechbrain==0.5.16
-SpeechRecognition==3.10.1
-PyQt6==6.7.0
+mysql-connector-python==9.0.0
+numpy==2.1.1
+pandas==2.2.3
+PyQt6==6.7.1
+PyQt6_sip==13.8.0
 qasync==0.27.1
-ffmpeg==1.4
+requests==2.32.3
+scipy==1.14.1
+sounddevice==0.5.0
 soundfile==0.12.1
-PySoundFile==0.9.0.post1
+speechbrain==1.0.1
+SpeechRecognition==3.10.4
+torch==2.4.1
+torchaudio==2.4.1
